...
          testID="anotherButton"
          style={styles.coursesButton}
          onPress={goToCourses}>
          <Text style={styles.buttonText}>My Courses</Text>
        </TouchableOpacity>
        <TouchableOpacity style={styles.profileButton} onPress={goToProfile}>
          <Text style={styles.buttonText}>My Profile</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
};

...
